# advent-of-code

./: .gitignore  13.txt  README.md  aoc.cabal  aoc2021.cabal  code01.hs  code02  code02.hi  code02.hs  code02D  code03  code03.hi  code03.hs  code04  code04.hi  code04.hs  code05.hs  test  testtesttest
2021/: aoc2021.cabal
2021/data/: data15  data25
2021/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Util.hs
2022/: aoc2022.cabal
2022/data/: data17  data18
2022/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Main.hs  Util.hs
2022/src/Util/: Matrix.hs
data/: data11  data24
data/2020/: data20
data/2023/: data15  data16  data20
inputs/2016/: 17  23
inputs/2017/: 02  23  25
inputs/2018/: 06  07  08  14  18  22  24
inputs/2019/: 01  08  09  11  17  22  24  25
inputs/2020/: 06  11  23  25  data03  data05  data19
inputs/2022/: 24  25  data08  data09
inputs/2023/: 09  12  14  19  23  24  data07  data13  data21  data25
koka/: code01.kk  code02.kk
libraries/AOC/: Area.hs  Graph.hs  List.hs  Number.hs  Prelude.hs  Search.hs
libraries/aoc/: AOC.hs
libraries/aoc/AOC/: Area.hs  Box3.hs  Draw.hs  Graph.hs  HashMap.hs  HashSet.hs  IntCode.hs  Interval.hs  LinearAlgebra.hs  List.hs  MassivArray.hs  Monad.hs  Number.hs  Parser.hs  Prelude.hs  Range.hs  Sequence.hs  Tuple.hs  Util.hs  V2.hs  V3.hs  V4.hs
libraries/aoc/AOC/Graph/: Base.hs  Clique.hs  DAG.hs  Degeneracy.hs  MaximumMatching.hs  MinCut.hs  Search.hs
libraries/aoc/AOC/Mutable/: DynArray.hs  Heap.hs  PriorityMap.hs
libraries/z3/: Z3Helpers.hs  Z3Parser.hs  Z3Quote.hs
src/: AOC.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs  Util.hs
src/2015/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs
src/2016/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs
src/2017/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs
src/2018/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs
src/2019/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs
src/2020/: Day01.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day14.hs  Day16.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs
src/2021/: Day03.hs  Day06.hs  Day08.hs  Day10.hs  Day11.hs  Day13.hs  Day14.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs
src/2022/: Day01.hs  Day02.hs  Day06.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day15.hs  Day16.hs  Day19.hs  Day20.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs
src/2023/: Day01.hs  Day03.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs
src/AOC/: Debug.hs  Interval.hs  List.hs  Monad.hs  Number.hs  Parser.hs  Prelude.hs  Search.hs  Tuple.hs  Util.hs  V2.hs  V3.hs  V4.hs
src/AOC2020/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day20.hs  Day22.hs  Day23.hs  Day25.hs  Main.hs
src/AOC2021/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs  Util.hs
src/AOC2022/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs
src/AOC2023/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs
src/Util/: Debug.hs  Matrix.hs  Parser.hs  Search.hs
