cabal-version:       2.2
name:                aoc
version:             0.1.0.0
license:             MIT
author:              Guillaume Bagan
copyright:           2022 Guillaume Bagan
build-type:          Simple

common aoc
    default-language: GHC2021
    
    default-extensions:
        BlockArguments
        DeriveDataTypeable
        LambdaCase
        MultiWayIf
        MonadComprehensions
        NoImplicitPrelude
        OverloadedRecordDot
        OverloadedStrings
        QuasiQuotes
        RecordWildCards
        TemplateHaskell
        TypeFamilies


    ghc-options:
        -O2
        -Wall
        -Wcompat
        -Wincomplete-uni-patterns
        -Wredundant-constraints

library aoclib
    import: aoc
    hs-source-dirs: libraries/aoc
    exposed-modules:
        AOC
        AOC.Area
        AOC.Debug
        AOC.Graph
        AOC.Graph.Base
        AOC.Graph.MaximumMatching
        AOC.Graph.MinCut
        AOC.Graph.Search
        AOC.HashSet
        AOC.HashMap
        AOC.LinearAlgebra
        AOC.List
        AOC.Monad
        AOC.Number
        AOC.Prelude
        AOC.Parser
        AOC.Range
        AOC.Tuple
        AOC.Util
        AOC.V2
        AOC.V3
        AOC.V4
    build-depends: base >= 4.15 && < 5
                   , containers
                   , massiv
                   , megaparsec
                   , microlens
                   , psqueues
                   , relude
                   , template-haskell
                   , text
                   , vector

library z3helper
    import: aoc
    hs-source-dirs: libraries/z3
    exposed-modules:
        Z3Helpers Z3Parser Z3Quote
    build-depends: base >= 4.15 && < 5
                   , aoclib
                   , megaparsec
                   , parser-combinators
                   , template-haskell
                   , z3

common aoc-exe
    import: aoc
    build-depends:  base >= 4.15 && < 5
                   , aoclib
                   , containers
                   , massiv
                   , megaparsec
                   , microlens
                   , microlens-mtl
                   , microlens-th
                   , microlens-platform
                   , relude
                   , text
                   , unordered-containers
                   , vector

executable aoc2015
    import: aoc-exe
    hs-source-dirs:      src/2015
    main-is:             Main.hs
    other-modules: Day01 Day02 Day03 Day04 Day05 Day06 Day07 Day08 Day09 Day10 Day11 Day12 Day13 Day14 Day15 Day16 Day17 Day18 Day19 Day20 Day21 Day22 Day23 Day24 Day25
    build-depends: base16-bytestring, cryptohash-md5

executable aoc2016
    import: aoc-exe
    hs-source-dirs:      src/2016
    main-is:             Main.hs
    other-modules: Day01 Day02 Day03 Day04 Day05 Day06 Day07 Day08 Day09 Day10 Day11 Day12 Day13 Day14 Day15 Day16 Day17 Day18 Day19 Day20 Day21 Day22
    build-depends: base16-bytestring, bytestring, cryptohash-md5, vector-instances

executable aoc2020
    import: aoc-exe
    hs-source-dirs:      src/2020
    main-is:             Main.hs
    other-modules: Day01 Day02 Day03 Day04 Day05 Day06 Day07 Day08 Day09 Day10 Day11 Day12 Day13 Day14 Day15 Day16 Day17 Day18 Day19 Day20 Day21 Day22 Day23 Day24 Day25
    build-depends: parser-combinators

executable aoc2021
    import: aoc-exe         
    hs-source-dirs:      src/2021
    main-is:             Main.hs
    other-modules: Day01 Day02 Day03 Day04 Day05 Day06 Day07 Day08 Day09 Day10 Day11 Day12 Day13 Day14 Day15 Day16 Day17 Day18 Day19 Day20 Day21 Day22 Day23 Day24 Day25
    build-depends: vector-instances

executable aoc2022
    import: aoc-exe
    hs-source-dirs:      src/2022
    main-is:             Main.hs
    other-modules: Day01 Day02 Day03 Day04 Day05 Day06 Day07 Day08 Day09 Day10 Day11 Day12 Day13 Day14 Day15 Day16 Day17 Day18 Day19 Day20 Day21 Day22 Day23 Day24 Day25
    build-depends: hashtables, rosezipper, streams

executable aoc2023
    import: aoc-exe
    hs-source-dirs:      src/2023
    main-is:             Main.hs
    other-modules: Day01 Day02 Day03 Day04 Day05 Day06 Day07 Day08 Day09 Day10 Day11 Day12 Day13 Day14 Day15 Day16 Day17 Day18 Day19 Day20 Day21 Day22 Day23 Day24 Day25