name:                aoc2021
version:             0.1.0.0
-- synopsis:
-- description:
license:             None
author:              Guillaume Bagan
copyright:           2021 Guillaume Bagan
build-type:          Simple
cabal-version:       >=1.10

library
    exposed-modules:
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        Day08
        Day09
        Day10
        Day11
        Day12

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    default-extensions:
                    BlockArguments
                    LambdaCase
                    MultiWayIf
                    TupleSections

    -- other-extensions:
    build-depends:
                       base >= 4.7 && < 5
                     , containers
                     , megaparsec
                     , split
                     , lens

    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc2021
    hs-source-dirs:      src
    main-is:             Main.hs
    default-language:    Haskell2010
    default-extensions:
                    BlockArguments
                    LambdaCase
                    MultiWayIf
                    TupleSections
    ghc-options:
              -Wall
              -Wcompat
              -Wincomplete-uni-patterns
              -Wredundant-constraints
    build-depends:   base >= 4.7 && < 5
                     , containers
                     , megaparsec
                     , split
                     , lens
                     , aoc2021