name:                aoc2021
version:             0.1.0.0
-- synopsis:
-- description:
license:             None
author:              Guillaume Bagan
copyright:           2021 Guillaume Bagan
build-type:          Simple
cabal-version:       >=1.10

executable aoc2021
    hs-source-dirs:      src
    main-is:             Main.hs
    other-modules:
                Day01
                Day02
                Day03
                Day04
                Day05
                Day06
                Day07
                Day08
                Day09
                Day10
                Day11
                Day12
                Day13
                Day14
                Day15
                Day16
                Day17
                Day18
                Day19
                Day20
                Day21
                Day22
                Day23
                Day24
                Day25
                Util

    default-language:    Haskell2010
    default-extensions:
                    BlockArguments
                    FlexibleContexts
                    FlexibleInstances
                    LambdaCase
                    MultiWayIf
                    NoImplicitPrelude
                    OverloadedStrings
                    TupleSections
                    TypeApplications
                    TypeFamilies
    ghc-options:
              -Wall
              -Wcompat
              -Wincomplete-uni-patterns
              -Wredundant-constraints
    build-depends:   base >= 4.15 && < 5
                     , search-algorithms
                     , array
                     , containers
                     , either
                     , linear
                     , massiv
                     , megaparsec
                     , rio