name:                aoc2022
version:             0.1.0.0
-- synopsis:
-- description:
license:             None
author:              Guillaume Bagan
copyright:           2022 Guillaume Bagan
build-type:          Simple
cabal-version:       >=1.10

executable aoc2022
    hs-source-dirs:      src
    main-is:             Main.hs
    other-modules:
                Day01
                Day02
                Day03
                Day04
                Day05
                Day06
                Day07
                Day08
                Day09
                Util

    default-language:    Haskell2010
    default-extensions:
                    BlockArguments
                    FlexibleContexts
                    FlexibleInstances
                    LambdaCase
                    MultiWayIf
                    NoImplicitPrelude
                    OverloadedStrings
                    TupleSections
                    TypeApplications
                    TypeFamilies
    ghc-options:
              -Wall
              -Wcompat
              -Wincomplete-uni-patterns
              -Wredundant-constraints
    build-depends:   base >= 4.16 && < 5
                     , containers
                     , megaparsec
                     , rio
                     , rosezipper
                     , split