name:                aoc2022
version:             0.1.0.0
-- synopsis:
-- description:
license:             None
author:              Guillaume Bagan
copyright:           2022 Guillaume Bagan
build-type:          Simple
cabal-version:       >=1.10

executable aoc2022
    hs-source-dirs:      src
    main-is:             Main.hs
    other-modules:
                Day01
                Day02
                Day03
                Day04
                Day05
                Day06
                Day07
                Day08
                Day09
                Day10
                Day11
                Day12
                Util
                Util.Matrix

    default-language:    Haskell2010
    default-extensions:
                    BlockArguments
                    FlexibleContexts
                    FlexibleInstances
                    LambdaCase
                    MultiWayIf
                    NamedFieldPuns
                    NoImplicitPrelude
                    OverloadedStrings
                    RecordWildCards
                    TemplateHaskell
                    TupleSections
                    TypeApplications
                    TypeFamilies
    ghc-options:
              -Wall
              -Wcompat
              -Wincomplete-uni-patterns
              -Wredundant-constraints
    build-depends:   base >= 4.15 && < 5
                     , containers
                     , megaparsec
                     , microlens
                     , microlens-th
                     , rio
                     , rosezipper
                     , split